--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Odin Recipes Home</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
+          <a href="recipes/tequilachili.html">Tequila Chili</a>
     </body>
 </html>
