Add two more recipes Create and buildbiscuitchickenpotsoup.html and chocolatechipcookies.html including corresponding link to index.html and images added.

--- a/recipes/tequilachili.html
+++ b/recipes/tequilachili.html
@@ -8,6 +8,9 @@
 
     <h1>Tequila Chili</h1>
       <img src="../images/tequilachili.jpg" alt="bowl of chili with sour cream and other toppings">
+
+      <h2>Description</h2>
+      <p>Beef and bean chili.</p>
     
       <h2>Ingredients</h2>
         <ul>
