See previous commit message

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-          <a href="recipes/tequilachili.html">Tequila Chili</a>
-    </body>
+          <ul>
+            <li><a href="recipes/tequilachili.html">Tequila Chili</a></li>
+            <li><a href="recipes/biscuitchickenpotsoup.html"> Biscuit Chicken Pot Pie Soup</a> </li>
+            <li><a href="recipes/chocolatechipcookies.html"> Chocolate Chip Cookies</a></li>
+          </ul>
+        </body>
 </html>
